# Cb_Disconnectome

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: assumptions.md  data_sources.md
notebooks/: 00_explore_suit_space.ipynb
qa/: qa_01_atlas_alignment.py  qa_02_cortico_nuclear.py  qa_03_tractography.py  qa_04_4d_nifti.py  qa_05_inference_sanity.py  qa_06_flatmap_projection.py
src/: __init__.py  build_4d_nifti.py  cortico_nuclear_map.py  disconnection_matrix.py  download.py  flatmap.py  inference.py  tractography.py  utils.py
tests/: test_cortico_nuclear.py  test_disconnection_matrix.py  test_inference.py
