[project]
name = "cerebellar-disconnectome"
version = "0.1.0"
description = "Cerebellar lesion interpretation via efferent pathway disconnectome modeling"
requires-python = ">=3.10"
dependencies = [
    "nibabel>=5.2.0",
    "nilearn>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "dipy>=1.7.0",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "black", "ruff"]
